--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=spring-cloud-config-server
 server.port=8888
 
+# Configure config server to retrieve config settings from local git repo
 spring.cloud.config.server.git.uri=file://C:/code/currency-exchange/git-local-config-repo
